--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <script src="data_generator.js"></script>
   </head>
   <body>
+
+    <h1>this is a small change</h1>
     <script>
 
       $(document).ready(function(){
